[package]
name = "ite8291r2_ctl"
version = "0.1.0"
authors = ["leewis <simpleiland@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.7", features = ["derive", "string"] }
hidapi = { version = "2.2.2", default-features = false, features = ["linux-static-hidraw"] }
thiserror = "1.0.40"
